# video-to-music-eval

./: .gitignore  pyproject.toml  readme.md
evaluation_pipeline/: README.md  audioclip_inference.py  generate_audio_caption.py  generate_video_caption.py  video_caption_to_music_caption.py  wav2clip_inference.py
vtm_eval/: README.md  run.py
vtm_eval/evaluate/: evaluation.py
vtm_eval/evaluation/text2text/: baselines.py  eval_daeyong.py
vtm_eval/evaluation/video2audio/: baselines.py  eval_daeyong.py
vtm_eval/extractor/text2text/: music_text_embedding.py  video_text_embedding.py
vtm_eval/extractor/video2audio/: audioclip_audio_embedding.py  audioclip_video_embedding.py  wav2clip_video_embedding.py
vtm_eval/extractors/: audio_embedding.py  build_music_vector_db_audioclip.py  build_music_vector_db_text.py  build_music_vector_db_wav2clip.py  bulid_music_vector_db.py  text_embedding.py  vision_embedding.py
vtm_eval/inference/: inference.py
vtm_eval/inference/text2text/: baselines.py  baselines_daeyong.py
vtm_eval/inference/video2audio/: audioclip_inference.py  baselines.py  wav2clip_inference.py
vtm_eval/metrics/: retrieval.py
